# coherent-rs

./: .gitignore  Cargo.toml  README.md  example
c/: Cargo.toml  discovery.h  example.cpp  host_discovery_server.cpp  network_example.cpp
c/src/: lib.rs
src/: laser.rs  lib.rs  network.rs
src/laser/: debug.rs  discoverynx.rs
