workspace = { members = ["c"] }
[package]
name = "coherent-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Rust-based serial communication to control Coherent lasers"
keywords = ["microscopy", "coherent", "laser", "two-photon"]

[dependencies]
serialport = "4.6.0"

[lib]
name = "coherent_rs"