[workspace]
members = ["c"]

[package]
name = "coherent-rs"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"
description = "Rust-based serial communication to control Coherent lasers"
keywords = ["microscopy", "coherent", "laser", "two-photon"]

[dependencies]
serialport = "4.6.0"
serde = { version = "1.0", features = ["derive"], optional = true}
rmp-serde = {version = "*", optional = true}

[lib]
name = "coherent_rs"

[[bin]]
name = "host-discovery-server"
path = "./bin/host_discovery_server.rs"

[[bin]]
name = "force-free-discovery"
path = "./bin/force_free_discovery.rs"

[[bin]]
name = "listen-print-discovery"
path = "./bin/listen_and_print_discovery.rs"

[features]
network = ["dep:serde", "dep:rmp-serde"]