[package]
name = "coherent-rs-c"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"
description = "Extremely thin FFI wrapper for `coherent-rs` to be used in C"
keywords = ["microscopy", "coherent", "laser", "two-photon"]


[dependencies]
coherent-rs = { path = "../."}
serde = { version = "1.0", features = ["derive"], optional = true}

[lib]
name = "coherent_rs_c"
crate-type = ["cdylib"]

[features]
network = ["dep:serde", "coherent-rs/network"]
